--- a/iQuiz/Base.lproj/Main.storyboard
+++ b/iQuiz/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_7" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AGV-9o-bMi">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,14 +16,108 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ListScreen" customModule="iQuiz" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="A3M-Ul-LUC">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="QuizCell" rowHeight="70" id="DFc-bo-e6X" customClass="QuizCell" customModule="iQuiz" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="320" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="DFc-bo-e6X" id="23X-kl-Ogm">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Arg-D3-PIl">
+                                                    <rect key="frame" x="15" y="5" width="60" height="60"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Arg-D3-PIl" secondAttribute="height" multiplier="60:60" id="1Vj-bE-yGy"/>
+                                                        <constraint firstAttribute="width" constant="60" id="3UK-sj-RLL"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subject" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Weh-fr-mWN">
+                                                    <rect key="frame" x="85" y="5" width="220" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8cU-et-6iR">
+                                                    <rect key="frame" x="85" y="32" width="220" height="27.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" red="0.37055522200000002" green="0.37056469920000001" blue="0.37055957319999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="8cU-et-6iR" secondAttribute="trailing" constant="15" id="1AD-cN-gQr"/>
+                                                <constraint firstItem="8cU-et-6iR" firstAttribute="top" secondItem="Weh-fr-mWN" secondAttribute="bottom" constant="3" id="7CC-AX-Irb"/>
+                                                <constraint firstItem="8cU-et-6iR" firstAttribute="leading" secondItem="Arg-D3-PIl" secondAttribute="trailing" constant="10" id="A5X-d5-3Xf"/>
+                                                <constraint firstAttribute="bottom" secondItem="Arg-D3-PIl" secondAttribute="bottom" constant="5" id="Mjj-7N-rzf"/>
+                                                <constraint firstItem="Weh-fr-mWN" firstAttribute="leading" secondItem="Arg-D3-PIl" secondAttribute="trailing" constant="10" id="TtU-AC-jVA"/>
+                                                <constraint firstAttribute="trailing" secondItem="Weh-fr-mWN" secondAttribute="trailing" constant="15" id="VDD-Lu-RHe"/>
+                                                <constraint firstItem="Arg-D3-PIl" firstAttribute="centerY" secondItem="23X-kl-Ogm" secondAttribute="centerY" id="cGt-02-S1P"/>
+                                                <constraint firstItem="Weh-fr-mWN" firstAttribute="top" secondItem="Arg-D3-PIl" secondAttribute="top" id="cN3-AE-JwU"/>
+                                                <constraint firstItem="Arg-D3-PIl" firstAttribute="top" secondItem="23X-kl-Ogm" secondAttribute="top" constant="5" id="cbz-mT-WPU"/>
+                                                <constraint firstItem="Arg-D3-PIl" firstAttribute="leading" secondItem="23X-kl-Ogm" secondAttribute="leading" constant="15" id="fMC-qI-KZV"/>
+                                                <constraint firstAttribute="bottom" secondItem="8cU-et-6iR" secondAttribute="bottom" constant="10" id="tfF-Sr-KnN"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="quizDescriptionLabel" destination="8cU-et-6iR" id="tSR-gU-if2"/>
+                                            <outlet property="quizImageView" destination="Arg-D3-PIl" id="dSA-LB-GJd"/>
+                                            <outlet property="quizSubjectLabel" destination="Weh-fr-mWN" id="35N-22-H4L"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="tZI-aO-Oar"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="arr-s9-tX1"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="A3M-Ul-LUC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="DYV-3j-4b8"/>
+                            <constraint firstItem="A3M-Ul-LUC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="L4E-0s-SrP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="A3M-Ul-LUC" secondAttribute="trailing" id="W2r-Yx-4Of"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="A3M-Ul-LUC" secondAttribute="bottom" id="YyM-YH-rNB"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="8je-Vw-QU6">
+                        <barButtonItem key="leftBarButtonItem" title="Settings" id="skb-CB-u16">
+                            <connections>
+                                <action selector="settingsButton:" destination="BYZ-38-t0r" id="0V2-Qs-okx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="A3M-Ul-LUC" id="Jno-gw-rsJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="660" y="387.25637181409297"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wju-bd-PI2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AGV-9o-bMi" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gxU-qG-6ml">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="svM-EL-A5I"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Gm-f1-Sai" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-22.399999999999999" y="388.60569715142429"/>
         </scene>
     </scenes>
 </document>
