added url in settings

--- a/iQuiz/Base.lproj/Main.storyboard
+++ b/iQuiz/Base.lproj/Main.storyboard
@@ -523,7 +523,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="abP-RI-Mdz"/>
+        <segue reference="KqC-Kf-sah"/>
         <segue reference="glN-hi-EC2"/>
     </inferredMetricsTieBreakers>
 </document>
